# docforge

./: .gitignore  Dockerfile  docker-compose.yml  fly.toml
api/: Dockerfile
api/ClearCapture.Api/: ClearCapture.Api.http  Program.cs  appsettings.Development.json  appsettings.json
api/ClearCapture.Api/Controllers/: AdminController.cs  DocumentsController.cs
api/ClearCapture.Api/Data/: AppDbContext.cs
api/ClearCapture.Api/Models/: Document.cs  MockErpOrder.cs
api/ClearCapture.Api/Services/: ClassifierService.cs  CppEngineService.cs  DocumentProcessingService.cs  ExportService.cs
api/DocForge.Api/: DocForge.Api.http  Program.cs  appsettings.Development.json  appsettings.json
api/DocForge.Api/Controllers/: AdminController.cs  DocumentsController.cs
api/DocForge.Api/Data/: AppDbContext.cs
api/DocForge.Api/Models/: Document.cs  MockErpOrder.cs
api/DocForge.Api/Services/: ClassifierService.cs  CppEngineService.cs  DocumentProcessingService.cs  ExportService.cs
classifier/: Dockerfile  requirements.txt  train.py
classifier/app/: classifier.py  main.py
cpp-engine/: CMakeLists.txt  Dockerfile
cpp-engine/src/: cli_main.cpp  engine.cpp  engine.hpp  main.cpp
cpp-engine/src/extraction/: extracted_field.hpp  rule_extractor.cpp  rule_extractor.hpp
cpp-engine/src/ingestion/: file_loader.cpp  file_loader.hpp
cpp-engine/src/ocr/: tesseract_engine.cpp  tesseract_engine.hpp
cpp-engine/src/preprocessing/: image_processor.cpp  image_processor.hpp
cpp-engine/src/thread_pool/: thread_pool.cpp  thread_pool.hpp
db/init/: 01-schema.sql  02-mock-erp.sql
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/documents/: DocumentList.tsx  DocumentUpload.tsx  StatusBadge.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/validation/: ActionBar.tsx  DocumentViewer.tsx  ExtractedFields.tsx  FieldRow.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
(+1 files in other folders)
